src/test/deca/context/valid/without_class/empty_main.deca
/// Description:
// 	  test syntax empty main
// Resultats:
// 	  ok
//
// Historique:
// 	  cree le 14/01/2023
{

}