src/test/deca/context/invalid/class/mutual_class_extends.deca
/// Description:
// 	  Error : Classes extending each other
//
// Resultats:
// 	  ALREADY_DEFINED_CLASS: Class B is already defined
//    line 18
// Historique:
// 	  cree le 18/01/2023

class B {

}

class A extends B {
    
}

class B extends A {

}
